# advent_utility

./: .clang-format  .gitignore  README.md  makefile  meson.build
.github/workflows/: unit_tests.yml
inc/: adventTypedef.h  commonAlg.h  fileOps.h  point.h  stringUtils.h
inc/utility/: combinatorics.h  fileOps.h  vectorMath.h
src/: combinatorics.cpp  commonAlg.cpp  fileOps.cpp  point.cpp  stringUtils.cpp
test/: meson.build  point_tests.cpp  stringUtils_tests.cpp
